# marvel-ingestion-pipeline

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  test.json
docs/: modules.rst  src.rst  tests.unit.rst
src/: aws_s3.py  aws_secrets.py  characters.py  comics.py  creators.py  events.py  extract_from_ingested_data.py  helpers.py  importing_to_snowflake.py  ingestion.py  main.py  snowflake.py  srialisers.py  updating.py  upload_to_s3.py
tests/unit/: conftest.py  test_helpers.py  test_ingestion.py  test_snowflake.py  test_units.py  unit_tests.py
