[tool.poetry]
name = "marvel-ingestion-yordan"
version = "0.1.0"
description = ""
authors = ["yordankitov <yordankitov@infinitelambda.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.27.1"
snowflake-connector-python = "^3.7.1"
boto3 = "^1.21.11"
pandas = "^2.2.1"
prefect = "^2.16.2"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mockito = "^1.5.0"
poethepoet = "^0.25.0"
responses = "^0.25.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
export_requirements = { shell = "poetry export -f requirements.txt --output requirements.txt" }
generate-docs = [
    { cmd = "sphinx-apidoc -o docs/ ." },
    { cmd = "cd docs && make clean html" }
]